Use List.of in MatchingServiceRequestSenderTest